_sass/_layout.scss
/**
 * Site header
 */
.site-header {
    border-top: 5px solid $grey-color-dark;
    border-bottom: 1px solid $grey-color-light;
    min-height: 56px;

    // Positioning context for the mobile navigation icon
    position: relative;
}

.site-title {
    font-size: 26px;
    line-height: 56px;
    letter-spacing: -1px;
    margin-bottom: 0;
    float: left;

    &,
    &:visited {
        color: $grey-color-dark;
    }
}

.site-nav {
    float: right;
    line-height: 56px;

    .menu-icon {
        display: none;
    }

    .page-link {
        color: $text-color;
        line-height: $base-line-height;

        // Gaps between nav items, but not on the first one
        &:not(:first-child) {
            margin-left: 20px;
        }
    }

    @include media-query($on-palm) {
        position: absolute;
        top: 9px;
        right: 30px;
        background-color: $background-color;
        border: 1px solid $grey-color-light;
        border-radius: 5px;
        text-align: right;

        .menu-icon {
            display: block;
            float: right;
            width: 36px;
            height: 26px;
            line-height: 0;
            padding-top: 10px;
            text-align: center;

            > svg {
                width: 18px;
                height: 15px;

                path {
                    fill: $grey-color-dark;
                }
            }
        }

        .trigger {
            clear: both;
            display: none;
        }

        &:hover .trigger {
            display: block;
            padding-bottom: 5px;
        }

        .page-link {
            display: block;
            padding: 5px 10px;
        }
    }
}



/**
 * Site footer
 */
.site-footer {
    border-top: 1px solid $grey-color-light;
    padding: $spacing-unit 0;
}

.footer-heading {
    font-size: 18px;
    margin-bottom: $spacing-unit / 2;
}

.contact-list,
.social-media-list {
    list-style: none;
    margin-left: 0;
}

.footer-col-wrapper {
    font-size: 15px;
    color: $grey-color;
    margin-left: -$spacing-unit / 2;
    @extend %clearfix;
}

.footer-col {
    float: left;
    margin-bottom: $spacing-unit / 2;
    padding-left: $spacing-unit / 2;
}

.footer-col-1 {
    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
    width:         calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
    width:         calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
    width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
    .footer-col-1,
    .footer-col-2 {
        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
        width:         calc(50% - (#{$spacing-unit} / 2));
    }

    .footer-col-3 {
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}

@include media-query($on-palm) {
    .footer-col {
        float: none;
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}



/**
 * Page content
 */

.page-content {
    //padding: $spacing-unit 0;
    position: relative;
    z-index: 4;
}

.page-section {
  margin-top: $spacing-unit;
  margin-bottom: $spacing-unit;
  padding-top: $spacing-unit;
  padding-bottom: $spacing-unit;
}

.page-heading {
    @include strong-text;
    font-size: $text-lg;
    text-align: center;
    width: 100%;
    border-bottom: 1px solid #E0E0E0;
    line-height: 0.1em;
    margin-top: $spacing-unit;
    margin-bottom: $spacing-unit;

    span {
      background: $background-color;
      padding: 0 10px;
    }
}


/**
 * Posts
 */
 .post-header {
   @include strong-text;
   margin-top: $spacing-unit;
   margin-bottom: $spacing-unit;
 }

 .post-list {
   @include flexcenter;

   .post-block, .more-block {
     @include spacing-sm;
     @include card;
     @include transition-all;
     display: inline;
     position: relative;
     z-index: 5;
     overflow: hidden;

     .more-image { border-bottom: 1px solid #00E5FF; }
     .block-title { @include strong-text; }
   }

   .post-block {
     max-width: 75%;

     .block-details {
       padding: .5em 0 .5em 1em;

       .block-title {
         margin-bottom: -5px;
       }
     }
   }

   .more-block {
     max-width: 17%;

     .more-details {
       padding: .15em 0 .15em .5em;
       white-space: nowrap;
       text-overflow: ellipsis;
     }
   }
 }

.post-list {
    margin-left: 0;
    list-style: none;

    > li {
        margin-bottom: $spacing-unit;
    }
}

.post-meta {
  font-size: $small-font-size;
  color: $grey-color;
}

.post-link {
  display: block;
}

.post-title {
  @include media-query($on-laptop) {
    font-size: 36px;
  }
}

.post {
  .post-content {
    margin-top: $spacing-unit;
    margin-bottom: $spacing-unit;

    h2 {
      font-size: 32px;

      @include media-query($on-laptop) {
        font-size: 28px;
      }
    }

    h3 {
      font-size: 26px;

      @include media-query($on-laptop) {
          font-size: 22px;
      }
    }

    h4 {
      font-size: 20px;

      @include media-query($on-laptop) {
          font-size: 18px;
      }
    }
  }
}

.post-content-section-title {
  position: relative;
  margin-top: $spacing-unit * 4;
  margin-bottom: $spacing-unit * 4;
  height: 355px;
  width: 100%;
  color: #ffffff;
  background-image: url("/../images/waves-mid-flat.svg");
  background-repeat: repeat-x;

  .section-title {
    font-size: $text-xxl;
    font-weight: lighter;
    text-align: center;
    text-transform: uppercase;
  }
}

.vnn-brand {
  margin-bottom: -180px;
  z-index: -1;
  background-image: url("/../images/vnn-bg.png");
  height: 400px;
}


/**
 * Screen: sm
 */
 @media screen and (min-width: $on-palm) {
   .post-list { .post-block { max-width: 45%; } }
 }


/**
 * Screen: md
 */
 @media screen and (min-width: $on-laptop) {
   .wrapper {
     max-width: -webkit-calc(1000px - (#{$spacing-unit} * 2)); //og = 800px
     max-width:         calc(1000px - (#{$spacing-unit} * 2)); //og = 800px
   }

   .post {
     .post-preview {
       float: right;
       margin-top: -70px;
       width: 49%;
     }

     .post-details {
       float: left;
       width: 49%;
     }
   }

   .post-content {
     h1, h2, h3, h4, h6, h6, p {
       margin-left: auto;
       margin-right: auto;
       margin-bottom: $spacing-unit / 6;
       max-width: -webkit-calc(1000px - (#{$spacing-unit} * 10));
       max-width:         calc(1000px - (#{$spacing-unit} * 10));
     }
   }

   .post-list { .post-block { width: 30%; } }

   .about {
     @include flex;

     .bio, .photo { @include spacing-md; }

     .bio {
       width: 60%;
     }

     .photo, .photo-mobile {
       width: auto;
     }

     .photo-mobile { display: none; }
   }
 }


/**
 * Screen: lg
 */
  @media screen and (min-width: $on-display) {
    .post-list { .post-block { max-width: 22%; } }
  }

